--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -1268,6 +1268,110 @@ li {
   width: 90%;
   margin: 0 auto; }
 
+header {
+  position: fixed;
+  width: 100%;
+  padding: 0 2rem 2rem 2rem;
+  background: #fff;
+  height: 6rem; }
+  header div {
+    position: absolute;
+    width: 100%; }
+    header div nav {
+      position: fixed;
+      width: 100%; }
+      header div nav .itens-menu {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-justify-content: space-around;
+            -ms-flex-pack: distribute;
+                justify-content: space-around; }
+        header div nav .itens-menu #tratamento {
+          border-bottom: 2px;
+          border-bottom-color: #dfd7cc;
+          position: relative;
+          width: 8%; }
+          header div nav .itens-menu #tratamento:after {
+            content: '';
+            position: absolute;
+            display: inline-block;
+            width: 0;
+            height: 0;
+            margin-left: 0.3em;
+            vertical-align: middle;
+            border-top: 0.3em solid;
+            border-right: 0.3em solid transparent;
+            border-bottom: 0;
+            border-left: 0.3em solid transparent;
+            right: -40%;
+            top: 1rem; }
+          header div nav .itens-menu #tratamento:hover:after {
+            -webkit-transform: rotate(-180deg);
+                -ms-transform: rotate(-180deg);
+                    transform: rotate(-180deg);
+            color: #c8bcac; }
+          header div nav .itens-menu #tratamento #tratamentoa {
+            position: relative;
+            border-bottom: 3px solid #000; }
+          header div nav .itens-menu #tratamento .submenu {
+            width: 100%;
+            position: absolute; }
+          header div nav .itens-menu #tratamento:hover .sub-menu {
+            display: block;
+            opacity: 1;
+            height: 36vw;
+            width: 20vw;
+            top: 100%; }
+          header div nav .itens-menu #tratamento .sub-menu, header div nav .itens-menu #tratamento .sub-menu-1, header div nav .itens-menu #tratamento .sub-menu-2 {
+            display: none;
+            background: #ffffff;
+            margin-left: 0;
+            left: 0;
+            padding-left: 1em;
+            min-width: 100%;
+            display: block;
+            -webkit-box-sizing: border-box;
+                    box-sizing: border-box;
+            -webkit-transition: all .2s linear;
+            -o-transition: all .2s linear;
+            transition: all .2s linear;
+            opacity: 0;
+            height: 0;
+            overflow: hidden;
+            -webkit-box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.11);
+                    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.11);
+            -webkit-border-radius: 2px;
+                    border-radius: 2px; }
+            header div nav .itens-menu #tratamento .sub-menu li, header div nav .itens-menu #tratamento .sub-menu-1 li, header div nav .itens-menu #tratamento .sub-menu-2 li {
+              border-top: 0;
+              color: #6B7C93;
+              line-height: 120%;
+              font-weight: 600;
+              position: relative;
+              padding: 0.75rem 1.5rem 1.5rem 0;
+              font-size: 14px;
+              margin-bottom: 1rem; }
+          header div nav .itens-menu #tratamento #estetica {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex; }
+            header div nav .itens-menu #tratamento #estetica:hover .sub-menu-1 {
+              display: block;
+              opacity: 1;
+              height: 100%; }
+          header div nav .itens-menu #tratamento #cirurgia {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex; }
+            header div nav .itens-menu #tratamento #cirurgia:hover .sub-menu-2 {
+              display: block;
+              opacity: 1;
+              height: 100%; }
+
 .container {
   width: 90%;
   margin: 0 auto; }
