--- a/src/resources/sass/components/_header.sass
+++ b/src/resources/sass/components/_header.sass
@@ -1,96 +1,96 @@
 @import './_pattern'
 @import './_responsive'
 
-// header
-//     position: fixed
-//     width: 100%
-//     padding: 0 2rem 2rem 2rem
-//     background: #fff
-//     height: 6rem
-//     div
-//         position: absolute
-//         width: 100%
-//         nav
-//             position: fixed
-//             width: 100%
-//             .itens-menu
-//                 display: flex
-//                 justify-content: space-around
-//                 #tratamento
-//                     border-bottom: 2px
-//                     border-bottom-color: $bege-links
-//                     position: relative
-//                     width: 8%
+header
+    position: fixed
+    width: 100%
+    padding: 0 2rem 2rem 2rem
+    background: #fff
+    height: 6rem
+    div
+        position: absolute
+        width: 100%
+        nav
+            position: fixed
+            width: 100%
+            .itens-menu
+                display: flex
+                justify-content: space-around
+                #tratamento
+                    border-bottom: 2px
+                    border-bottom-color: $bege-links
+                    position: relative
+                    width: 8%
 
-//                     &:after
-//                         content: ''
-//                         position: absolute
-//                         display: inline-block
-//                         width: 0
-//                         height: 0
-//                         margin-left: 0.3em
-//                         vertical-align: middle
-//                         border-top: 0.3em solid
-//                         border-right: 0.3em solid transparent
-//                         border-bottom: 0
-//                         border-left: 0.3em solid transparent
-//                         right: -40%
-//                         top: 1rem
-//                     &:hover:after
-//                         transform: rotate(-180deg)
-//                         color: #c8bcac
-//                     #tratamentoa
-//                         position: relative
-//                         border-bottom: 3px solid #000
-//                     .submenu
-//                         width: 100%
-//                         position: absolute
-//                     &:hover
-//                         .sub-menu
-//                             display: block
-//                             opacity: 1
-//                             height: 36vw
-//                             width: 20vw
-//                             top: 100%
-//                     .sub-menu, .sub-menu-1, .sub-menu-2
-//                         // position: absolute
-//                         display: none
-//                         background: $branco-padrao
-//                         margin-left: 0
-//                         left: 0
-//                         padding-left: 1em
-//                         min-width: 100%
-//                         display: block
-//                         box-sizing: border-box
-//                         transition: all .2s linear
-//                         opacity: 0
-//                         height: 0
-//                         overflow: hidden
-//                         box-shadow: 1px 1px 4px 2px rgba(0,0,0,.11)
-//                         border-radius: 2px
+                    &:after
+                        content: ''
+                        position: absolute
+                        display: inline-block
+                        width: 0
+                        height: 0
+                        margin-left: 0.3em
+                        vertical-align: middle
+                        border-top: 0.3em solid
+                        border-right: 0.3em solid transparent
+                        border-bottom: 0
+                        border-left: 0.3em solid transparent
+                        right: -40%
+                        top: 1rem
+                    &:hover:after
+                        transform: rotate(-180deg)
+                        color: #c8bcac
+                    #tratamentoa
+                        position: relative
+                        border-bottom: 3px solid #000
+                    .submenu
+                        width: 100%
+                        position: absolute
+                    &:hover
+                        .sub-menu
+                            display: block
+                            opacity: 1
+                            height: 36vw
+                            width: 20vw
+                            top: 100%
+                    .sub-menu, .sub-menu-1, .sub-menu-2
+                        // position: absolute
+                        display: none
+                        background: $branco-padrao
+                        margin-left: 0
+                        left: 0
+                        padding-left: 1em
+                        min-width: 100%
+                        display: block
+                        box-sizing: border-box
+                        transition: all .2s linear
+                        opacity: 0
+                        height: 0
+                        overflow: hidden
+                        box-shadow: 1px 1px 4px 2px rgba(0,0,0,.11)
+                        border-radius: 2px
 
-//                         li
-//                             border-top: 0
-//                             color: #6B7C93
-//                             line-height: 120%
-//                             font-weight: 600
-//                             position: relative
-//                             padding: 0.75rem 1.5rem 1.5rem 0
-//                             font-size: 14px
-//                             margin-bottom: 1rem
-//                     #estetica
-//                         display: flex
-//                         &:hover
-//                             .sub-menu-1
-//                                 display: block
-//                                 opacity: 1
-//                                 height: 100%
-//                     #cirurgia
-//                         display: flex
-//                         &:hover
-//                             .sub-menu-2
-//                                 display: block
-//                                 opacity: 1
-//                                 height: 100%
+                        li
+                            border-top: 0
+                            color: #6B7C93
+                            line-height: 120%
+                            font-weight: 600
+                            position: relative
+                            padding: 0.75rem 1.5rem 1.5rem 0
+                            font-size: 14px
+                            margin-bottom: 1rem
+                    #estetica
+                        display: flex
+                        &:hover
+                            .sub-menu-1
+                                display: block
+                                opacity: 1
+                                height: 100%
+                    #cirurgia
+                        display: flex
+                        &:hover
+                            .sub-menu-2
+                                display: block
+                                opacity: 1
+                                height: 100%
                     
                     
